update service classes